hello-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"kind":"Deployment","apiVersion":"apps/v1","metadata":{"name":"hello-app","creationTimestamp":null,"labels":{"app":"hello-app"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"hello-app"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"hello-app"}},"spec":{"containers":[{"name":"httpd-24","image":"registry.redhat.io/ubi9/httpd-24","resources":{}}]}},"strategy":{}},"status":{}}
  creationTimestamp: null
  labels:
    app: hello-app
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-app
    spec:
      containers:
      - image: registry.redhat.io/ubi9/httpd-24
        name: httpd-24
        ports:
          - containerPort: 8080
            protocol: TCP
        resources: {}
status: {}
