test_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"kind":"Deployment","apiVersion":"apps/v1","metadata":{"name":"test-app","creationTimestamp":null,"labels":{"app":"test-app"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"test-app"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"test-app"}},"spec":{"containers":[{"name":"httpd-24","image":"registry.redhat.io/ubi9/httpd-24","resources":{}}]}},"strategy":{}},"status":{}}
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-app
    spec:
      containers:
        - image: registry.redhat.io/ubi9/httpd-24
          name: test-app
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
status: {}
